Change endpoint logic for get transactions for date
Delete useless code